# api-server

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  READMY.md  _database.sqlite  config.yaml  database.sqlite  database22.sqlite  docker-compose.yml  init.sql  package_deb.sh
.github/markdownlint/: markdownlint.yaml
.github/workflows/: package.yml  release.yaml  release_deb_package.yaml  test.yaml
design/contracts/: qury-format-python.json  qury-format-sql-multi.json  qury-format-sql.json  reply-format.json  reply-multi-format.json
docker/: README.md  docker-compose.yml
docker/api-server/: Dockerfile
docker/client/: Dockerfile
exhibition-2024-build/: docker-compose.yaml
exhibition-2024-build/api-server/: Dockerfile  config.yaml
exhibition-2024-build/client/: Dockerfile
extensions/scripts/: create_postgres_database.py  sqlite.py  test-request-to-python.py  test_request_to_postgres.py  test_request_to_python.py
scripts/: read_std_in.py  script_tamplate.py  sqlite.py
service/: api-server.service
sql/: 1_create_user.sql  2_create_tag.sql  3_create_event.sql  4_create_event_view.sql  5_create_operating_cycle.sql  6_create_operating_metric.sql  7_create_report.sql  8_create_fault.sql  create_postgres_database.py  create_postgres_database.sql  init.sql  init_data.sql  regular_expression.txt  ship.sql
sql/ARK/: draft_mark.sql  load_line.sql  screw.sql  ship copy.sql  ship.sql  strength_force_limit.sql
sql/Sofia/: data.sql  data2.sql  ship.sql  strength_force_limit.sql  strength_force_limit_harbor.sql  strength_force_limit_sea.sql
sql/_Sofia/: ship.sql  strength_force_limit_sea.sql
sql/area/: bow_area.sql  horizontal_area_stability.sql  horizontal_area_strength.sql  th_frame_h.sql  th_frame_stab_h.sql  th_frame_str_h.sql  th_frame_v.sql  vertical_area.sql  vertical_area_stability.sql  vertical_area_strength.sql
sql/cargo_categories/: cargo_categories.sql
sql/container/: container_base_create.sql  container_cargo_create.sql
sql/db_checkpoint/: db_checkpoint_create.sql
sql/draft/: bow_board.sql  draft_mark.sql  load_line.sql  screw.sql
sql/frames/: 0.sql  1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  computed_frame_trigger.sql  create.sql  draft_mark.sql  physical.sql  regular_expression.txt  t  theoretical_583.sql
sql/general_data/: strength_force_limit.sql  unit.sql
sql/hidrostatic/: center_draught.sql  center_waterline.sql  delta_windage_area.sql  delta_windage_moment.sql  entry_angle.sql  flooding_angle.sql  mean_draught.sql  metacentic_height_limits.sql  min_metacentric_height_subdivision.sql  pantocaren.sql  rad_long.sql  rad_trans.sql  volume_shift.sql  waterline_area.sql  waterline_breadth.sql  waterline_length.sql
sql/hold/: bulkhead.sql  bulkhead_place.sql  bulkhead_place_trigger.sql  hold_compartment.sql  hold_compartment_curve.sql  hold_compartment_trigger.sql  hold_grain_moment.sql  hold_group.sql  hold_part.sql  hold_part_id.sql  hold_part_trigger.sql  volume_max_trigger.sql
sql/icing/: create.sql  th_frame_h.sql  th_frame_v.sql
sql/loads/: cargo.sql  compartment_curve_trigger.sql  compartment_trigger.sql  create.sql  grain_moment.sql  load_ballast.sql  load_ballast_10 copy.sql  load_ballast_10.sql  load_base.sql  load_constant.sql  load_create.sql  load_empty.sql  load_sea_10.sql  load_sea_100.sql  load_space.sql  load_space_10.sql  loads_general.sql  loads_trigger.sql  protocol_99.sql  tanks.sql  volume_max_trigger.sql
sql/result/: criterion.sql  criterion_category.sql  criterion_stability.sql  criterion_values.sql  criterions_parameters.sql  draft_mark.sql  heel_trim_general.sql  load_line.sql  load_line_type_criterions.sql  loads_general.sql  parameter_data.sql  parameter_head.sql  result_stability.sql  result_strength.sql  screw.sql  stability_diagram.sql  strength_force_limit.sql
sql/ship/:  flooding_angle.sql  center_draught.sql  center_waterline.sql  delta_windage_area.sql  delta_windage_moment.sql  draft_mark.sql  entry_angle.sql  flooding_angle.sql  geometry.sql  icing.sql  icing_timber.sql  load_line.sql  mean_draught.sql  metacentic_height_limits.sql  pantocaren.sql  (+19 more)
src/: api_query.rs  api_query_error.rs  api_query_executable.rs  api_query_keepalive.rs  api_query_python.rs  api_query_sql.rs  api_query_type.rs  api_query_unknown.rs  api_reply.rs  api_server.rs  api_service_type.rs  config.rs  executable_query.rs  main.rs  python_query.rs  qury-format-python.json  qury-format-sql-multi.json  qury-format-sql.json  qury-format.json  reply-format.json  reply-multi-format.json  sql_query.rs  sql_query_mysql.rs  sql_query_postgre.rs  sql_query_sqlite.rs  sql_query_sqlite_external_connection.rs  sql_reply.rs  sqlite_initials.rs  tcp_connection.rs  tcp_server.rs
(+245 files in other folders)
