[package]
name = "api-server"
version = "0.1.21"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.11"
#
# date & time
chrono = { version = "^0.4", features = ["serde"] }
#
#
testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
# testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", branch = "Socket-Message" }


rusqlite = { version = "^0.32", features = ["bundled"] }

postgres = { version = "^0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }

# [features]
# with-bit-vec-0_6 = ["tokio-postgres/with-bit-vec-0_6"]
# with-chrono-0_4 = ["tokio-postgres/with-chrono-0_4"]
# with-eui48-0_4 = ["tokio-postgres/with-eui48-0_4"]
# with-geo-types-0_4 = ["tokio-postgres/with-geo-types-0_4"]
# with-serde_json-1 = ["tokio-postgres/with-serde_json-1"]
# with-uuid-0_8 = ["tokio-postgres/with-uuid-0_8"]

serde_yaml = "^0.9"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "^3.0"

yaml-rust = "^0.4"
linked-hash-map = "^0.5"

bytes = "^1.4"

rust_decimal = { version = "^1.32", features = [ "tokio-pg" ] }

rand = "^0.8"

indexmap = { version = "^2.1", features = ["serde"] }

clap = { version = "^4.5", features = ["derive"] }
